--- a/index.html
+++ b/index.html
@@ -11,52 +11,67 @@
 </head>
 
 <body>
-    <div class="container">
-        <div data-sticky-container>
-            <div style="width:100%" class="sticky" data-sticky data-options="marginTop:0;">
-                Jordan
-            </div>
-        </div>
+    <section class="row">
+        <header>
 
-        <div class="row">
-            <div class="small-6 large-12 columns">
-                <!-- ... -->
-                <div class="small-2 large-4 columns">
-                </div>
-                <div class="small-2 large-4 columns">
-                </div>
-                <div class="small-2 large-4 columns">
+
+            <div data-sticky-container>
+
+                <div style="width:100%" class="sticky" data-sticky data-options="marginTop:0;">
+
+                    <h1> Jordan</h1>
+
                 </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="small-6 large-12 columns">
+
+
+        </header>
+    </section>
+    <section class="container">
+        <section class="row" style="height:152px;">
+        </section>
+        <section class="row">
+            <!-- ... -->
+            <div class="medium-3 columns small-1 offset- columns">
+                <img src="images/favcategories.png" alt="">
+            </div>
+            <div class="medium-3 columns small-offset-1 columns ">
+                <img src="images/img.png" alt="">
+            </div>
+            <div class="medium-3 columns medium-offset-3 columns">
+                <img src="images/favlocations.png" alt="">
+            </div>
+        </section>
+
+        <section class="row">
+            <div class="small-6 medium-12 columns">
 
             </div>
-        </div>
+        </section>
 
 
 
 
-        <div class="row">
-            <div class="small-6 large-12 columns">
+        <section class="row">
+            <div class="small-6 medium-12 columns">
 
             </div>
-        </div>
+        </section>
 
 
 
 
-    </div>
-    <footer class="small-6 large-12 columns">
-        <div class="small-2 large-4 columns">
-        </div>
-        <div class="small-2 large-4 columns">
-        </div>
-        <div class="small-2 large-4 columns">
-        </div>
-    </footer>
+
+        <footer class="footer">
+            <div class="small-2 large-4 columns">
+            </div>
+            <div class="small-2 large-4 columns">
+            </div>
+            <div class="small-2 large-4 columns">
+            </div>
+        </footer>
+    </section>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
