--- a/index.html
+++ b/index.html
@@ -33,15 +33,28 @@
         </section>
         <section class="row">
             <!-- ... -->
-            <div class="medium-3 columns small-1 offset- columns">
-                <img src="images/favcategories.png" alt="">
+
+            <div class="medium-3 columns medium-offset-0 columns">
+                <br>
+                <br>
+                <br>
+                <img src="images/favcategories.png" alt="">24
+                <p> Fav Categories</p>
             </div>
-            <div class="medium-3 columns small-offset-1 columns ">
-                <img src="images/img.png" alt="">
+
+            <div class="medium-4 columns medium-offset-1 columns ">
+                <img src="images/img.png" alt="category">
             </div>
-            <div class="medium-3 columns medium-offset-3 columns">
-                <img src="images/favlocations.png" alt="">
+
+            <div class="medium-3 columns medium-offset-1 columns">
+                <br>
+                <br>
+                <br>
+                <img src="images/favlocations.png" alt="location">8
+                <p>Fav Locations</p>
             </div>
+
+
         </section>
 
         <section class="row">
