tel Aviv,button

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 
         <section class="row">
             <div class="small-6 medium-12 columns">
+                <br>
+                <br>
+                <h1>Jordan Havelberg</h1>
+                <p>Tel-Aviv,Israel</p>
 
             </div>
         </section>
@@ -68,7 +72,7 @@
 
         <section class="row">
             <div class="small-6 medium-12 columns">
-
+                <a href="#" class="button allert"><img src="images/following.png" alt="">&nbsp;Follow</a>
             </div>
         </section>
 
