--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
 
         <section class="row">
             <div class="small-6 medium-12 columns">
-                <a href="#" class="button allert"><img src="images/following.png" alt="">&nbsp;Follow</a>
+                <br>
+                <br>
+                <a href="#" class="button follow"><img src="images/follow.png" alt="">&nbsp;Follow</a>
             </div>
         </section>
 
