--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
         <footer class="footer">
             <br>
             <br>
-            <div class="small-2 large-4 columns">
+            <div class="small-2 medium-4 columns">
                 <img src="images/deals.png" alt="">208 &nbsp;
                 <p>Deals</p>
             </div>
-            <div class="small-2 large-4 columns">
+            <div class="small-2 medium-4 columns">
                 <img src="images/followers.png" alt="">1,541&nbsp;
                 <p>Followers</p>
             </div>
-            <div class="small-2 large-4 columns">
+            <div class="small-2 medium-4 columns">
                 <img src="images/following.png" alt="">743&nbsp;
                 <p>Following</p>
             </div>
