--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <img src="images/deals.png" alt="">208 &nbsp;
                 <p>Deals</p>
             </div>
-            <div class="small-2 medium-4 columns">
+            <div class="small-2 medium-4 columns padded">
                 <img src="images/followers.png" alt="">1,541&nbsp;
                 <p>Followers</p>
             </div>
