--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <br>
                 <br>
                 <br>
-                <img src="images/favcategories.png" alt="">24
+                <img src="images/favcategories.png" alt="">&nbsp;24
                 <p> Fav Categories</p>
             </div>
 
@@ -50,7 +50,7 @@
                 <br>
                 <br>
                 <br>
-                <img src="images/favlocations.png" alt="location">8
+                <img src="images/favlocations.png" alt="location">&nbsp;8
                 <p>Fav Locations</p>
             </div>
 
@@ -86,15 +86,15 @@
             <br>
             <br>
             <div class="small-2 medium-4 columns">
-                <img src="images/deals.png" alt="">208 &nbsp;
+                <img src="images/deals.png" alt="">&nbsp;208
                 <p>Deals</p>
             </div>
             <div class="small-2 medium-4 columns padded">
-                <img src="images/followers.png" alt="">1,541&nbsp;
+                <img src="images/followers.png" alt="">&nbsp;1,541
                 <p>Followers</p>
             </div>
             <div class="small-2 medium-4 columns">
-                <img src="images/following.png" alt="">743&nbsp;
+                <img src="images/following.png" alt="">&nbsp;743
                 <p>Following</p>
             </div>
         </footer>
