--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <p>Deals</p>
             </div>
             <div class="small-2 medium-4 columns padded">
-                <img src="images/followers.png" alt="">&nbsp;1,541
+                <img src="images/followers.png" alt="">&nbsp;<span class="stat-count">1500</span>
                 <p>Followers</p>
             </div>
             <div class="small-2 medium-4 columns">
